# oxian-backend

./: .gitignore  pyproject.toml
app/: main.py
app/api/rest/: chat.py  farm_profile.py  files.py  user_pref.py
app/api/websocket/: connection_manager.py  router.py
app/core/: config.py  dependencies.py  process_manager.py  simple_queue.py
app/integrations/auth/: base.py  errors.py  firebase_auth_provider.py  firebase_config.py  provider.py
app/integrations/database/: mogodb.py
app/integrations/storage/: azure_blob_store.py  base.py  errors.py  files.py
app/integrations/weather/: open_weather.py
app/prompts/: prompt_manager.py
app/prompts/templates/: chat.j2  tts.j2
app/repositories/: chat_repository.py  farm_profile_repository.py  files_repository.py  message_repository.py  process_repository.py  user_pref_repository.py
app/schemas/: chat.py  farm_profile.py  file.py  generic_types.py  message.py  process.py  user_pref.py  weather.py
app/services/chat/: __init__.py  handler.py  service.py
app/services/crop_recommendation/: handler.py  service.py
app/services/storage/: service.py
app/services/tts/: service.py
app/util/: parser.py
tests/: test_chat_handler.py  test_chat_service.py
