[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "azure-storage-blob>=12.28.0",
    "fastapi[standard]>=0.135.1",
    "firebase-admin>=7.2.0",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "motor>=3.7.1",
    "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.21",
]
